# level-zero-spec

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  404.html  CMakeLists.txt  Doxyfile  Programming_Guide.md  README.md  REQUIREMENTS.md  SECURITY.md  compute_runtime.cmake  device_group_apis.h  driverAPI.h  index.html  xe_all.h  xe_cmdlist.h  xe_cmdqueue.h  xe_common.h  xe_device.h  xe_driver.h  xe_event.h  xe_fence.h  xe_memory.h  xe_resource.h  xe_semaphore.h  xe_umd_api.h
core/: CMakeLists.txt  INTRO.md  PROG.md
core/include/: CMakeLists.txt  xe_all.h  xe_all.hpp  xe_barrier.h  xe_barrier.hpp  xe_barrier.inl  xe_cl_interop.h  xe_cl_interop.hpp  xe_cl_interop.inl  xe_cmdgraph.h  xe_cmdgraph.hpp  xe_cmdgraph.inl  xe_cmdlist.h  xe_cmdlist.hpp  xe_cmdlist.inl  xe_cmdqueue.h  xe_cmdqueue.hpp  xe_cmdqueue.inl  xe_common.h  xe_common.hpp  xe_common.inl  xe_copy.h  xe_copy.hpp  xe_copy.inl  xe_device.h  xe_device.hpp  xe_device.inl  xe_driver.h  xe_driver.hpp  xe_driver.inl  xe_event.h  xe_event.hpp  xe_event.inl  xe_fence.h  xe_fence.hpp  xe_fence.inl  xe_image.h  xe_image.hpp  xe_image.inl  xe_memory.h  (+15 more)
core/source/: CMakeLists.txt  allow_unhandled_token.cpp  builtin_functions_lib.h  builtin_functions_lib_impl.cpp  builtin_functions_lib_impl.h  builtins.cpp  builtins.h  cl_interop.h  cmdcontainer.cpp  cmdcontainer.h  cmdgraph.h  cmdlist.cpp  cmdlist.h  cmdlist_ats.cpp  cmdlist_bdw.cpp  cmdlist_gen12hp.inl  cmdlist_hw.h  cmdlist_hw.inl  cmdlist_icllp.cpp  cmdlist_imp.cpp  cmdlist_imp.h  cmdlist_kbl.cpp  cmdlist_skl.cpp  cmdlist_tgllp.cpp  cmdqueue.cpp  cmdqueue.h  cmdqueue_ats.cpp  cmdqueue_bdw.cpp  cmdqueue_hw.h  cmdqueue_hw.inl  cmdqueue_icllp.cpp  cmdqueue_imp.h  cmdqueue_kbl.cpp  cmdqueue_skl.cpp  cmdqueue_tgllp.cpp  device.cpp  device.h  driver.cpp  driver.h  driver_imp.h  (+73 more)
core/source/gen11/: cmdlist_icllp.cpp  image_icllp.cpp
core/source/gen12hp/: cmdlist_ats.cpp  cmdlist_gen12hp.inl  cmdqueue_ats.cpp  cmdqueue_gen12hp.inl  encode_ats.cpp  image_ats.cpp  image_gen12hp.inl
core/source/gen12lp/: cmdlist_tgllp.cpp  encode_tgllp.cpp  image_tgllp.cpp
core/source/gen8/: cmdlist_bdw.cpp  image_bdw.cpp
core/source/kernels/: copyBuffer.cl  copyBufferToBufferBytes_Gen12HPcore.hpp  copyBufferToBufferBytes_Gen9core.hpp  copyBuffer_Gen12HPcore.spv  copy_buffer_to_buffer_bytes.h
core/source/os_interface/: os_context.h  os_event.h
icd_loader/: CMakeLists.txt  icd_loader.cpp  icd_loader.h
icd_loader/config_md/: CMakeLists.txt
samples/xello_tracer/: CMakeLists.txt  xello_tracer.cpp
samples/zello_tracer/: CMakeLists.txt  zello_tracer.cpp
samples/zello_world/: CMakeLists.txt  zello_world.cpp
source/core/os_interface/: CMakeLists.txt
source/driver_loader/: CMakeLists.txt  core_loader.cpp  core_loader.h  extended_loader.cpp  extended_loader.h  loader.cpp  loader.h  tools_loader.cpp  tools_loader.h
source/drivers/null/: CMakeLists.txt  ze_core_driver.cpp  ze_experimental_driver.cpp  ze_null.cpp  ze_null.h  ze_nullddi.cpp  ze_tools_driver.cpp  zes_nullddi.cpp  zet_nullddi.cpp  zex_nullddi.cpp
source/layers/null/: CMakeLists.txt  xe_core_driver.cpp  xe_experimental_driver.cpp  xe_extended_driver.cpp  xe_null.cpp  xe_null.h  xe_tools_driver.cpp  ze_core_driver.cpp  ze_experimental_driver.cpp  ze_null.cpp  ze_tools_driver.cpp
source/layers/validation/: CMakeLists.txt  core_layer.cpp  extended_layer.cpp  layer.cpp  layer.h  tools_layer.cpp  xe_core_layer.cpp  xe_experimental_layer.cpp  xe_extended_layer.cpp  xe_layer.cpp  xe_layer.h  xe_tools_layer.cpp  ze_core_layer.cpp  ze_experimental_layer.cpp  ze_layer.cpp  ze_layer.h  ze_tools_layer.cpp  ze_valddi.cpp  zes_valddi.cpp  zet_valddi.cpp  zex_valddi.cpp
source/lib/: CMakeLists.txt  ze_core_libapi.cpp  ze_core_libddi.cpp  ze_experimental_libapi.cpp  ze_experimental_libddi.cpp  ze_lib.cpp  ze_lib.h  ze_libapi.cpp  ze_libddi.cpp  ze_tools_libapi.cpp  ze_tools_libddi.cpp  zes_libapi.cpp  zes_libddi.cpp  zet_libapi.cpp  zet_libddi.cpp  zex_libapi.cpp  zex_libddi.cpp
source/lib/core/: CMakeLists.txt  xe_barrier.cpp  xe_cl_interop.cpp  (+36 more)
source/loader/: CMakeLists.txt  core_loader.cpp  extended_loader.cpp  loader.cpp  loader.h  tools_loader.cpp  tools_loader.cpp.orig  xe_core_loader.cpp  xe_core_loader.h  xe_experimental_loader.cpp  xe_experimental_loader.h  xe_extended_loader.cpp  xe_extended_loader.h  xe_loader.cpp  xe_loader.h  xe_object.h  xe_tools_loader.cpp  xe_tools_loader.h  ze_core_loader.cpp  ze_core_loader.h  ze_experimental_loader.cpp  ze_experimental_loader.h  ze_ldrddi.cpp  ze_ldrddi.h  ze_loader.cpp  ze_loader.h  ze_object.h  ze_tools_loader.cpp  ze_tools_loader.h  zes_ldrddi.cpp  zes_ldrddi.h  zet_ldrddi.cpp  zet_ldrddi.h  zex_ldrddi.cpp  zex_ldrddi.h
source/wrapper/: CMakeLists.txt  ze_wprapi.cpp  zes_wprapi.cpp  zet_wprapi.cpp  zex_wprapi.cpp
tests/: CMakeLists.txt
tests/black_box_tests/: CMakeLists.txt  README.md  helpers.cpp  helpers.inl  xello_copy.cpp  xello_copy_image.cpp  xello_events.cpp  xello_function_pointers.cpp  xello_image.cpp  xello_ipc_copy.cpp  xello_multidev.cpp  xello_spirv.cpp  xello_world.cpp  xello_world_icd.cpp  xello_world_icd_clang.cpp  xello_world_static.cpp  xello_worlds.h
tests/generators/: config.ini  extended_helper.py  generate_driver_exports.py  generate_driver_frontend.py  generate_driver_loader.py  generate_icd_loader.py  run.py
tests/perf_tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  README.md  cmd_list.cpp  cmd_list.h  cmd_list_bdw.cpp  cmd_list_gfxcore_family.h  cmd_list_gfxcore_family.inl  cmd_list_hw.cpp  cmd_list_hw.h  cmd_list_hw.inl  cmd_list_imp.cpp  cmd_list_imp.h  cmd_list_kbl.cpp  cmd_list_product_family.cpp  cmd_list_product_family.h  cmd_list_product_family.inl  cmd_list_product_family_skl.cpp  cmd_list_skl.cpp  cmd_queue.cpp  cmd_queue.h  cmd_queue_imp.h  cmdlist.cpp  cmdlist.h  cmdlist_ats.cpp  cmdlist_bdw.cpp  cmdlist_hw.h  cmdlist_hw.inl  cmdlist_imp.cpp  cmdlist_imp.h  cmdqueue.cpp  cmdqueue.h  cmdqueue_ats.cpp  cmdqueue_hw.h  cmdqueue_hw.inl  cmdqueue_imp.h  device.cpp  device.h  driver.cpp  driver.h  environment.cpp  (+80 more)
(+2964 files in other folders)
